<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.grupomdc.ejercicio1.Rectangulo_Perimetro">

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_base"/>

    <EditText
        android:id="@+id/edBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_cero"
        android:hint="@string/texto_base"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_altura"  />
    <EditText
        android:id="@+id/edAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_cero"
        android:hint="@string/texto_altura"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/rgOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rdPerimetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_perimetro"/>
        <RadioButton
            android:id="@+id/rdArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_area"/>
    </RadioGroup>

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_calcular"/>
    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_cero"/>
</LinearLayout>
